unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Add_Click_To_Dial_Target_to_Lookup__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Add_Click_To_Dial_Target_to_Lookup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Add &#39;Click To Dial&#39; target object to lookup results if not already included</description>
    <inlineHelpText>Add &#39;Click To Dial&#39; target object to lookup results if not already included</inlineHelpText>
    <label>Add Click To Dial Target to Lookup</label>
    <type>Checkbox</type>
</CustomField>