unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Allowed_RelatedTo_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Allowed_RelatedTo_Record_Types__c</fullName>
    <inlineHelpText>Allowed &#39;Related To&#39; record types that a call log entry is permitted to be linked to. Deselect all options to disable this feature. 
This feature is only applicable if &#39;Split Person &amp; Related To Query Results&#39; is checked</inlineHelpText>
    <label>Allowed Related To Record Types</label>
    <type>TextArea</type>
</CustomField>