unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Call_List_Template_2__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Call_List_Template_2__c</fullName>
    <description>Continuation of call list template if the template is too big to fit in a single field (255 chararacters maximum)</description>
    <label>Call List Template 2</label>
    <type>TextArea</type>
</CustomField>