unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Call_List_Template_4__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Call_List_Template_4__c</fullName>
    <description>Continuation of template from call list template 3</description>
    <label>Call List Template 4</label>
    <type>TextArea</type>
</CustomField>