unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Call_List_Template__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Call_List_Template__c</fullName>
    <description>Use this field to customize the recent call list in the CTI user interface</description>
    <label>Call List Template</label>
    <type>TextArea</type>
</CustomField>