unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Callback_Post_Call_Action__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Callback_Post_Call_Action__c</fullName>
    <defaultValue>&quot;merge+delete&quot;</defaultValue>
    <label>Callback Task Post Call Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>