unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__CTI_File_Host__c.field-meta.xml
<CustomField>
    <fullName>natterbox__CTI_File_Host__c</fullName>
    <description>Name of the Redmatter host to fetch application files from.</description>
    <label>CTI File Host</label>
    <length>255</length>
    <type>Text</type>
</CustomField>