unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Custom_Callback_Template_2__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Custom_Callback_Template_2__c</fullName>
    <label>Custom Callback Template 2</label>
    <type>TextArea</type>
</CustomField>