unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Custom_Callback_Template_4__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Custom_Callback_Template_4__c</fullName>
    <label>Custom Callback Template 4</label>
    <type>TextArea</type>
</CustomField>