unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Custom_Callback_Template__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Custom_Callback_Template__c</fullName>
    <label>Custom Callback Template</label>
    <type>TextArea</type>
</CustomField>