unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__DateTime_Format__c.field-meta.xml
<CustomField>
    <fullName>natterbox__DateTime_Format__c</fullName>
    <defaultValue>&quot;auto&quot;</defaultValue>
    <inlineHelpText>Selects the Date/Time formatting of the {CallDateTimeLocal} macro according to the locale &amp; language of the organization.
Also sets the time formatting in the CTI UI according to the locale of the user</inlineHelpText>
    <label>DateTime Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>