unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Disable_Call_Log_Case_Assignment_Rules__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Disable_Call_Log_Case_Assignment_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disable the running of Salesforce Case auto-assignment rules if logging calls as Cases</inlineHelpText>
    <label>Disable Call  Log Case Assignment Rules</label>
    <type>Checkbox</type>
</CustomField>