unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Disable_Callback__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Disable_Callback__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, UI for creating a callback task from call wrapup is hidden.</description>
    <inlineHelpText>Check this to hide fields during wrapup for creating a callback task.</inlineHelpText>
    <label>Disable Callback</label>
    <type>Checkbox</type>
</CustomField>