unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Disable_Config_Load_Via_Apex_REST__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Disable_Config_Load_Via_Apex_REST__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Config Load Via Apex REST</label>
    <type>Checkbox</type>
</CustomField>