unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Disable_Quick_Case_Assignment_Rules__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Disable_Quick_Case_Assignment_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disable the running of Salesforce Case auto-assignment rules on Quick Case creation</inlineHelpText>
    <label>Disable Quick Case Assignment Rules</label>
    <type>Checkbox</type>
</CustomField>