unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Disable_Withhold_Caller_ID__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Disable_Withhold_Caller_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the &#39;Withhold my caller ID&#39; option is not available in settings under &#39;My caller ID&#39;</description>
    <inlineHelpText>If checked, the &#39;Withhold my caller ID&#39; option is not available in settings under &#39;My caller ID&#39;</inlineHelpText>
    <label>Disable Withhold Caller ID</label>
    <type>Checkbox</type>
</CustomField>