unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Disable_wrapup_for_unknown_numbers__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Disable_wrapup_for_unknown_numbers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable notes and wrap-up for numbers not found in SalesForce</description>
    <label>Disable wrapup for unknown numbers</label>
    <type>Checkbox</type>
</CustomField>