unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Display_Recording_UI__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Display_Recording_UI__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, users will see a &#39;this call is being recorded&#39; UI displayed in their CTI user interface</description>
    <inlineHelpText>If checked, users will see a &#39;this call is being recorded&#39; UI displayed in their CTI user interface</inlineHelpText>
    <label>Display Recording UI</label>
    <type>Checkbox</type>
</CustomField>