unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Dont_Send_SF_Session_ID_To_CTI_Host__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Dont_Send_SF_Session_ID_To_CTI_Host__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Don&#39;t Send SF Session ID to CTI Host</label>
    <type>Checkbox</type>
</CustomField>