unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Enable_star_code_buttons__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Enable_star_code_buttons__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this to have selected star code actions appear as buttons in the CTI</description>
    <inlineHelpText>Check this to have selected star code actions appear as buttons in the CTI</inlineHelpText>
    <label>Enable star code buttons</label>
    <type>Checkbox</type>
</CustomField>