unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Enable_Wrapup__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Enable_Wrapup__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, users will be required to add a wrapup code and log message for each call.</description>
    <inlineHelpText>Check this to enable wrapup code logging.</inlineHelpText>
    <label>Enable Wrapup</label>
    <type>Checkbox</type>
</CustomField>