unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__EnableWriteDialItemStatus__c.field-meta.xml
<CustomField>
    <fullName>natterbox__EnableWriteDialItemStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, dial list item status will be updated with the mapped status.</description>
    <inlineHelpText>If checked, dial list item status will be updated with the mapped status.</inlineHelpText>
    <label>Enable Dial List Status Update</label>
    <type>Checkbox</type>
</CustomField>