unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Force_Auto_Pop__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Force_Auto_Pop__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Force auto-pop of Salesforce record even if CTI UI not the current focus</inlineHelpText>
    <label>Force Auto Pop</label>
    <type>Checkbox</type>
</CustomField>