unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Link_To_Current_Item_URL_Regexes__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Link_To_Current_Item_URL_Regexes__c</fullName>
    <description>Regular expressions used to extract the object ID from URL of custom Visualforce pages when clicking on the &#39;Link to current item&#39; button</description>
    <inlineHelpText>Regular expressions used to extract the object ID from URL of custom Visualforce pages when clicking on the &#39;Link to current item&#39; button</inlineHelpText>
    <label>Link To Current Item URL Regexes</label>
    <type>TextArea</type>
</CustomField>