unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Person_Lookup_Results_as_Dropdown__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Person_Lookup_Results_as_Dropdown__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Display Contact/Lead query lookup results as a drop down list (only applicable if &#39;Split Person &amp; Related To Query Result&#39; is checked)</description>
    <inlineHelpText>Display Contact/Lead query lookup results as a drop down list (only applicable if &#39;Split Person &amp; Related To Query Result&#39; is checked)</inlineHelpText>
    <label>Person Lookup Results as Dropdown</label>
    <type>Checkbox</type>
</CustomField>