unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Pop_Query__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Pop_Query__c</fullName>
    <defaultValue>&quot;FIND {%1%} IN PHONE FIELDS&quot;</defaultValue>
    <description>SOSL query to look up salesforce objects that match phone numbers. The phone number in the query will be substituted for the string %1%.</description>
    <label>Pop Query</label>
    <type>TextArea</type>
</CustomField>