unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Query_Label_Map__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Query_Label_Map__c</fullName>
    <defaultValue>&quot;Account:Name:c2g__CODABankPhone__c,c2g__CODABankFax__c|Contact:FirstName,LastName:&quot;</defaultValue>
    <description>This field describes which fields to fetch for different objects (eg account, contact), in the order in which they should be displayed, one object type per line, or separated by the | symbol. Each list item consists of the object type followed by a colon, then a list of object fields to be displayed in the label. Eg: &quot;Account:AccountName|Case:Contact.Name&quot;</description>
    <label>Query label map</label>
    <type>TextArea</type>
</CustomField>