unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Quick_Case_Creation_Enabled__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Quick_Case_Creation_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enables controls for the quick creation of Cases</inlineHelpText>
    <label>Quick Case Creation Enabled</label>
    <type>Checkbox</type>
</CustomField>