unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Service_Presence_Call_Queue_Status__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Service_Presence_Call_Queue_Status__c</fullName>
    <inlineHelpText>Set current Omni-Channel Presence Status to this status during a Natterbox &#39;Call Queue&#39; Call</inlineHelpText>
    <label>Service Presence Call Queue Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>