unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Service_Presence_Login_Statuses__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Service_Presence_Login_Statuses__c</fullName>
    <inlineHelpText>When any of the selected statuses are set in Omni-Channel as the current status, then login to all Natterbox groups</inlineHelpText>
    <label>Service Presence Login Statuses</label>
    <type>TextArea</type>
</CustomField>