unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Service_Presence_Outbound_Status__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Service_Presence_Outbound_Status__c</fullName>
    <inlineHelpText>Set current Omni-Channel Presence Status to this status during a Natterbox Outbound Call</inlineHelpText>
    <label>Service Presence Outbound Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>