unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Show_Edit_Quick_Case_Subject__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Show_Edit_Quick_Case_Subject__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows the Quick Case Subject to be edited</description>
    <inlineHelpText>Allows the Quick Case Subject to be edited</inlineHelpText>
    <label>Show Edit Quick Case Subject</label>
    <type>Checkbox</type>
</CustomField>