unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Show_Edit_Wrapup_Subject__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Show_Edit_Wrapup_Subject__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows the subject of the call to be modified when logged in SF</description>
    <inlineHelpText>Allows the subject of the call to be modified when logged in SF</inlineHelpText>
    <label>Show Edit Wrapup Subject</label>
    <type>Checkbox</type>
</CustomField>