unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Show_None_Query_Result_Option__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Show_None_Query_Result_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show &#39;None&#39; selection option in query results</description>
    <inlineHelpText>Show &#39;None&#39; selection option in query results</inlineHelpText>
    <label>Show None Query Result Option</label>
    <type>Checkbox</type>
</CustomField>