unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Show_Policy_Pop_Record_Only__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Show_Policy_Pop_Record_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If call policy has specified ID of a record to screen pop, then don&#39;t show other number lookup results</inlineHelpText>
    <label>Show Policy Pop Record Only</label>
    <type>Checkbox</type>
</CustomField>