unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Specify_default_wrapup_button__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Specify_default_wrapup_button__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Specify default wrapup button</label>
    <type>Checkbox</type>
</CustomField>