unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Split_Person_and_RelatedTo_Query_Results__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Split_Person_and_RelatedTo_Query_Results__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Split out Person (Contacts &amp; Leads) and Related To (Accounts etc) query results into two separately selectable lists</description>
    <inlineHelpText>Split out Person (Contacts &amp; Leads) and Related To (Accounts etc) query results into two separately selectable lists</inlineHelpText>
    <label>Split Person &amp; Related To Query Results</label>
    <type>Checkbox</type>
</CustomField>