unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__UI_Theme__c.field-meta.xml
<CustomField>
    <fullName>natterbox__UI_Theme__c</fullName>
    <defaultValue>&quot;slds&quot;</defaultValue>
    <label>UI Theme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>