unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__UpdateLog__c.field-meta.xml
<CustomField>
    <fullName>natterbox__UpdateLog__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If you are adding logs via your dialplan policy and wish users&#39; wrapup codes and notes to be added to this existing record, check this box. Otherwise the CTI will create its own logs.</description>
    <inlineHelpText>Check this if your dialplan policy is generating logs, or leave unchecked to have the CTI generate its own logs.</inlineHelpText>
    <label>Update Policy Generated Log</label>
    <type>Checkbox</type>
</CustomField>