unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Wrapup_and_Notes_available_during_call__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Wrapup_and_Notes_available_during_call__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Make the wrapup radio buttons and notes field available during the call instead of just when complete</description>
    <label>Wrapup and Notes available during call</label>
    <type>Checkbox</type>
</CustomField>