unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Wrapup_Codes_Outbound_12__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Wrapup_Codes_Outbound_12__c</fullName>
    <description>Continuation of wrapup codes for outbound calls. Space in this field is limited to 255 characters. If more is required, overflow into Wrapup Codes Outbound 13</description>
    <label>Wrapup codes (outbound calls) 12</label>
    <type>TextArea</type>
</CustomField>