unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Wrapup_Codes_Outbound__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Wrapup_Codes_Outbound__c</fullName>
    <defaultValue>&quot;Call successful:0:0,Left voicemail:1:0,Appointment set:2:0,Able to pitch:3:0,Decision maker not reached:4:0&quot;</defaultValue>
    <description>Wrapup codes to be used in the call logs. Comma or newline separated list of text codes, with a numric identifier appended after a colon, eg: &quot;Call Successful:1,Call Failed:2&quot;</description>
    <label>Wrapup codes (outbound calls)</label>
    <type>TextArea</type>
</CustomField>