unpackaged/main/default/objects/natterbox__nbCallCenterConfig__c/listViews/natterbox__Call_Center.listView-meta.xml
<ListView>
    <fullName>natterbox__Call_Center</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>natterbox__Enable_Wrapup__c</columns>
    <columns>natterbox__Wrapup_Codes_Inbound__c</columns>
    <columns>natterbox__Wrapup_Codes_Outbound__c</columns>
    <columns>natterbox__Pop_Query__c</columns>
    <columns>natterbox__Query_Label_Map__c</columns>
    <filterScope>Everything</filterScope>
    <label>Call Center</label>
</ListView>